--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Linz</string>
+    <string name="app_name">After The Flash</string>
     <string name="MainMenuButtonSingle">Singleplayer</string>
     <string name="MainMenuButtonOnline">Multiplayer</string>
     <string name="MainMenuButtonTutorial">Tutorial</string>
